--- a/Wpf_Yshakow_PR8INS/Window2.xaml
+++ b/Wpf_Yshakow_PR8INS/Window2.xaml
@@ -5,8 +5,33 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Wpf_Yshakow_PR8INS"
         mc:Ignorable="d"
-        Title="Window2" Height="450" Width="800">
+        Title="Window2" Height="450" Width="500">
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="0.5*"/>
+            <RowDefinition Height="0.5*"/>
+            <RowDefinition Height="0.5*"/>
+            <RowDefinition Height="0.5*"/>
+            <RowDefinition Height="3*"/>
+            <RowDefinition Height="1*"/>
+        </Grid.RowDefinitions>
+
+        <TextBlock Grid.Row="0" Grid.Column="0" Margin="5" HorizontalAlignment="Right">X0</TextBlock>
+        <TextBlock Grid.Row="1" Grid.Column="0" Margin="5" HorizontalAlignment="Right">Xk</TextBlock>
+        <TextBlock Grid.Row="2" Grid.Column="0" Margin="5" HorizontalAlignment="Right">Dx</TextBlock>
+        <TextBlock Grid.Row="3" Grid.Column="0" Margin="5" HorizontalAlignment="Right">b</TextBlock>
+
+        <TextBox x:Name="X0" Grid.Row="0" Grid.Column="1" TextWrapping="Wrap" Text="1" VerticalContentAlignment="Center" Margin="5"/>
+        <TextBox x:Name="Xk" Grid.Row="1" Grid.Column="1" TextWrapping="Wrap" Text="2,2"  VerticalContentAlignment="Center" Margin="5"/>
+        <TextBox x:Name="Dx" Grid.Row="2" Grid.Column="1" TextWrapping="Wrap" Text="0,2" VerticalContentAlignment="Center" Margin="5"/>
+        <TextBox x:Name="B" Grid.Row="3" Grid.Column="1" TextWrapping="Wrap" Text="0,75" VerticalContentAlignment="Center" Margin="5"/>
+        <TextBox x:Name="X" Grid.Row="4" Grid.Column="0" Margin="5" TextWrapping="Wrap" HorizontalContentAlignment="Left" VerticalContentAlignment="Top"/>
+        <TextBox x:Name="Y" Grid.Row="4" Grid.Column="1" Margin="5" TextWrapping="Wrap" HorizontalContentAlignment="Left" VerticalContentAlignment="Top"/>
+
+        <Button Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="5" Width="100" Height="30"  Content="Вычислить" Click="Button_Click"/>
     </Grid>
 </Window>
